# multi-thread-toolkit

./: .gitmodules  CMakeLists.txt
example/: sharing_variable.cpp  topic_system.cpp
include/: CMakeLists.txt  mtt.hpp
include/service_system/serializer/: base_serializer.hpp  binary_serializer.hpp  json_serializer.hpp
include/service_system/tcp/: client.hpp  server.hpp
include/sharing_variable/: sharing_variable.hpp
include/topic_system/: publisher.hpp  subscriber.hpp  topic.hpp  topic_manager.hpp  topic_system.hpp
